--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: deploy GAE
 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  ## Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [master]
   pull_request:
